--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,7 @@
-<p>login works!</p>
+<div class="login-container">
+    <img class="film" src="assets/images/film.png" alt="film.png">
+    <div class="logo">Rotten Potatoes</div>
+    <div class="desc">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, neque velit vero inventore impedit quos. Perferendis id suscipit perspiciatis provident odit quasi eum laudantium, vel quae dicta officia placeat? Porro exercitationem corrupti minus alias adipisci delectus cum. Veniam ex adipisci alias voluptatem, ratione distinctio voluptatum reiciendis nemo. Totam, rem dolorum.
+    </div>
+</div>
