--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,36 @@
 <div class="login-container">
-    <img class="film" src="assets/images/film.png" alt="film.png">
-    <div class="logo">Rotten Potatoes</div>
-    <div class="desc">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, neque velit vero inventore impedit quos. Perferendis id suscipit perspiciatis provident odit quasi eum laudantium, vel quae dicta officia placeat? Porro exercitationem corrupti minus alias adipisci delectus cum. Veniam ex adipisci alias voluptatem, ratione distinctio voluptatum reiciendis nemo. Totam, rem dolorum.
+  <img class="film" src="assets/images/film.png" alt="film.png" />
+  <div class="logo">Rotten Potatoes</div>
+  <div class="desc">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, neque velit
+    vero inventore impedit quos. Perferendis id suscipit perspiciatis provident
+    odit quasi eum laudantium, vel quae dicta officia placeat? Porro
+    exercitationem corrupti minus alias adipisci delectus cum. Veniam ex
+    adipisci alias voluptatem, ratione distinctio voluptatum reiciendis nemo.
+    Totam, rem dolorum.
+  </div>
+  <div class="login-form">
+    <div class="form-group">
+      <label for="uname">Username</label>
+      <input
+        type="text"
+        name="uname"
+        class="form-control"
+        [(ngModel)]="username"
+      />
     </div>
+    <div class="form-group">
+      <label for="pword">Password</label>
+      <input
+        type="password"
+        name="pword"
+        class="form-control"
+        [(ngModel)]="password"
+      />
+    </div>
+    <div class="btn-container">
+        <div class="error">{{ errorMsg }}</div>
+      <button class="btn btn-dark" (click)="login()">Login</button>
+    </div>
+  </div>
 </div>
