--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -25,6 +25,7 @@
         .movies-thumbnail {
             display: flex;
             justify-content: space-between;
+            margin-bottom: 30px;
             .movie {
                 .cover {
                     img {
@@ -49,5 +50,30 @@
         min-height: calc(100vh - 80px);
         padding: 20px 40px;
         font-family: "Roboto", sans-serif;
+        h4 {
+            text-transform: uppercase;
+            font-weight: bold;
+            border-left: 5px solid #ff9900;
+            padding-left: 10px;
+        }
+        .movies {
+            .movie {
+                margin-bottom: 20px;
+                margin-top: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                .name {
+                    font-weight: bold;
+                    cursor: pointer;
+                }
+            }
+            .view-all {
+                color: #ff9900;
+                text-align: right;
+                margin-top: 30px;
+                cursor: pointer;
+            }
+        }
     }
 }
