--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,7 +3,7 @@
     .all-movies {
         width: 75%;
         min-height: calc(100vh - 80px);
-        border-right: 1px solid #fdc827;
+        border-right: 1px solid #8e44ad;
         padding: 20px 40px;
         font-family: "Roboto", sans-serif;
         .top {
@@ -14,11 +14,11 @@
             h4 {
                 text-transform: uppercase;
                 font-weight: bold;
-                border-left: 5px solid #ff9900;
+                border-left: 5px solid #8e44ad;
                 padding-left: 10px;
             }
             .view-all {
-                color: #ff9900;
+                color: #8e44ad;
                 cursor: pointer;
             }
         }
@@ -54,7 +54,7 @@
         h4 {
             text-transform: uppercase;
             font-weight: bold;
-            border-left: 5px solid #ff9900;
+            border-left: 5px solid #8e44ad;
             padding-left: 10px;
         }
         .movies {
@@ -71,7 +71,7 @@
                 }
             }
             .view-all {
-                color: #ff9900;
+                color: #8e44ad;
                 text-align: right;
                 margin-top: 30px;
                 cursor: pointer;
@@ -79,3 +79,37 @@
         }
     }
 }
+
+
+
+// @media only screen and (min-width: 600px) {
+//     /* For tablets: */
+//     .col-s-1 {width: 8.33%;}
+//     .col-s-2 {width: 16.66%;}
+//     .col-s-3 {width: 25%;}
+//     .col-s-4 {width: 33.33%;}
+//     .col-s-5 {width: 41.66%;}
+//     .col-s-6 {width: 50%;}
+//     .col-s-7 {width: 58.33%;}
+//     .col-s-8 {width: 66.66%;}
+//     .col-s-9 {width: 75%;}
+//     .col-s-10 {width: 83.33%;}
+//     .col-s-11 {width: 91.66%;}
+//     .col-s-12 {width: 100%;}
+//   }
+
+//   @media only screen and (min-width: 768px) {
+//     /* For desktop: */
+//     .col-1 {width: 8.33%;}
+//     .col-2 {width: 16.66%;}
+//     .col-3 {width: 25%;}
+//     .col-4 {width: 33.33%;}
+//     .col-5 {width: 41.66%;}
+//     .col-6 {width: 50%;}
+//     .col-7 {width: 58.33%;}
+//     .col-8 {width: 66.66%;}
+//     .col-9 {width: 75%;}
+//     .col-10 {width: 83.33%;}
+//     .col-11 {width: 91.66%;}
+//     .col-12 {width: 100%;}
+//   }
