--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
-  <img class="film" src="assets/images/film.png" alt="film.png" />
-  <div class="logo">Rotten Potatoes</div>
+  <img class="film" src="assets/images/p2.png" alt="film.png" />
+  <div class="logo">The Rate Gatsby</div>
   <div class="desc">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, neque velit
     vero inventore impedit quos. Perferendis id suscipit perspiciatis provident
