--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,14 +1,14 @@
 .header-container {
     width: 100%;
     height: 80px;
-    background-color: #fdc827;
+    background-color: #8e44ad;
     display: flex;
     align-items: center;
     justify-content: space-between;
     .logo {
         font-size: 24px;
         font-weight: bold;
-        font-family: 'Creepster', cursive;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         letter-spacing: 4px;
         margin-left: 40px;
         cursor: pointer;
