--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,12 +1,12 @@
 .login-container {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(135deg, #ffe645 0%, #e2aa02 100%);
+    background: linear-gradient(135deg, #8e44ad 20%, #9b59b6 80%);
     position: relative;
     .logo {
         font-size: 70px;
         font-weight: bold;
-        font-family: 'Creepster', cursive;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         letter-spacing: 10px;
         position: absolute;
         top: 50px;
@@ -14,7 +14,7 @@
     }
     .desc {
         font-size: 34px;
-        font-family: 'Aladin', cursive;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         letter-spacing: 5px;
         position: absolute;
         top: 200px;
@@ -23,7 +23,7 @@
         width: 1200px;
     }
     .film {
-        position: absolute;
+        position: relative;
         top: 50px;
         left: 50px;
         width: 618px;
@@ -32,7 +32,7 @@
         width: 500px;
         height: 300px;
         padding: 20px;
-        background-color: #fff;
+        background-color: #27ae60;
         border-radius: 10px;
         position: absolute;
         bottom: 50px;
@@ -43,6 +43,12 @@
         }
         label {
             font-weight: bold;
+            color: #ecf0f1;
+            margin-bottom: 5px;
+
+        }
+        input {
+            background-color: #ecf0f1;
         }
         .btn-container {
             position: relative;
