--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -19,7 +19,23 @@
                 </div>
                 <div class="form-group">
                     <label for="rating">Rating</label>
-                    <div class="rating">{{ movie.rating }}</div>
+                    <div class="rating">
+                        <label class="container">One
+                            <input type="radio" name="checked">
+                          </label>
+                          <label class="container">Two
+                            <input type="radio" name="checked">
+                          </label>
+                          <label class="container">Three
+                            <input type="radio" name="checked">
+                          </label>
+                          <label class="container">Four
+                            <input type="radio" name="checked">
+                          </label>
+                          <label class="container">Five
+                            <input type="radio" name="checked">
+                          </label>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="review">Review</label>
